--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
   },
   "homepage": "https://github.com/tgsource/tg-miner-block#readme",
   "devDependencies": {
-    "babel-core": "6.x.x",
-    "babel-loader": "7.x.x",
-    "babel-plugin-transform-object-rest-spread": "6.x.x",
-    "babel-preset-es2015": "6.x.x",
-    "babel-preset-stage-2": "6.x.x",
-    "clean-webpack-plugin": "0.x.x",
-    "copy-webpack-plugin": "4.x.x",
-    "crx-webpack-plugin": "0.x.x",
-    "uglifyjs-webpack-plugin": "0.x.x",
-    "webpack": "3.x.x",
-    "webpack-merge": "4.x.x",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "copy-webpack-plugin": "^4.1.0",
+    "crx-webpack-plugin": "^0.1.5",
+    "eslint": "^4.8.0",
+    "eslint-plugin-react": "^7.4.0",
+    "nyc": "^11.2.1",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.6.0",
+    "webpack-merge": "^4.1.0",
     "zip-webpack-plugin": "^2.0.0"
   }
 }
